# pycompmusic

./: .gitattributes  .gitignore  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  doc  fabfile.py  pyproject.toml  requirements  requirements.py2.txt  requirements.py3.txt  requirements.txt  setup.cfg  setup.py  tox.ini
compmusic/: __init__.py  _version.py  file.py  image.py  kutcheris.py  log.py  musicbrainz.py  nerur.py  parse_tags.py  run_job.py  swarganga.py  tags.py  wikipedia.py
compmusic/carnatic/: utils.py
compmusic/dunya/: __init__.py  andalusian.py  carnatic.py  conn.py  docserver.py  hindustani.py  jingju.py  makam.py  makam.py~
compmusic/essentia/: __init__.py  audioimages.py  cbrmp3.py  intonation.py  log.py  motif.py  pitch.py  rhythm.py  tonic.py  tonic_voting.py  wav.py
compmusic/extractors/: MakamFeatureExtractor.py  __init__.py  andalusian.py  audioimages.py  cbrmp3.py  intonation_profile.py  invMFCC.py  log.py  m4a.py  motif.py  musicxml2svg.py  pitch.py  rhythm.py  scorealign.py  smallaudioimage.py  tonic.py  wav.py
compmusic/fuzzy/: DAO.py  damerauLevenshtein.py  fuzzy_match.py  lcs.py  stringDuplicates.py
docs/: andalusian.rst  carnatic.rst  conf.py  docserver.rst  dunya.rst  hindustani.rst  index.rst  jingju.rst  makam.rst  modules.rst
test/: dunyatest.py  tag_test.py  tagtest.py
test/dunya/: conn_test.py
tools/: carnatic_tag_to_attr.py  healthcheck.py  makam_tag_to_attr.py  renamefiles.py  saveFolderForComposition.py  sertanscores.py  stats.py  update_mb_lengths.py  update_mb_works.py  works_by_recording.py
(+53 files in other folders)
